--- a/DarkkestP3/package.json
+++ b/DarkkestP3/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
