--- a/DarkkestP3/Staticwebapp.config.json
+++ b/DarkkestP3/Staticwebapp.config.json
@@ -5,5 +5,8 @@
       ".jsx": "application/javascript",
       ".tsx": "application/javascript",
       ".ts": "application/javascript"
+    },
+    "navigationFallback": {
+      "rewrite": "/"
     }
   }
