--- a/DarkkestP3/Staticwebapp.config.json
+++ b/DarkkestP3/Staticwebapp.config.json
@@ -1,12 +1,18 @@
 {
-    "mimeTypes": {
+  "routes": [
+    {
+      "route": "/profile",
+      "allowedRoles": ["authenticated"]
+    }
+  ],  
+  "mimeTypes": {
       ".js": "application/javascript",
       ".mjs": "application/javascript",
       ".jsx": "application/javascript",
       ".tsx": "application/javascript",
       ".ts": "application/javascript"
     },
-    "navigationFallback": {
+  "navigationFallback": {
       "rewrite": "/"
     }
   }
